--- a/css/custom.css
+++ b/css/custom.css
@@ -31,16 +31,18 @@ body .formSameAsCareerPage .hs-button.primary, body input[type="submit"], body i
   opacity: 1;
 } */
 
-#imgDiv-jobs-home{
-  background: url("../img/imi-mobile-bg-B.jpg") ;
+#imgDiv-jobs-home {
+  background: url("../img/imi-mobile-bg-B.jpg");
   opacity: 1;
 }
-#imgDiv-jobs-list{
-  background: url("../img/imi-mobile-bg-A.jpg") ;
+
+#imgDiv-jobs-list {
+  background: url("../img/imi-mobile-bg-A.jpg");
   opacity: 1;
 }
-#imgDiv-rhonda{
-  background: url("../img/imi-mobile-bg-A.jpg") ;
+
+#imgDiv-rhonda {
+  background: url("../img/imi-mobile-bg-A.jpg");
   opacity: 1;
 }
 
@@ -50,26 +52,51 @@ body .formSameAsCareerPage .hs-button.primary, body input[type="submit"], body i
     background: url("../img/imi-rhonda-solutions.jpg");
     opacity: 1;
   } */
-
-  #imgDiv-jobs-home{
+  #imgDiv-jobs-home {
     /* change to bigger background img */
-    /* background: url("../img/imi-rhonda-solutions.jpg")!important; */
-    background: url("../img-big/imi-rhonda-solutions.jpg")!important;
-    opacity: 1;
+    /* background: url("../img/imi-rhonda-solutions.jpg") !important; */
+    /* background: url("../img-big/imi-rhonda-solutions.jpg")!important; */
+    /* opacity: 1; */
+    /* height: 100%;
+     width: 100%; */
+    /* object-fit: contain
+    max-width:100%;
+    max-height:100%; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("../img/imi-rhonda-solutions.jpg") !important;
+    background-repeat: no-repeat;
+    background-size: contain;
+    /* background-image: url("../img-big/imi-rhonda-solutions.jpg")!important; */
   }
-
-  #imgDiv-jobs-list{
-    /* background: url("../img/rhonda-find-job2.jpg") !important ; */
-    background: url("../img-big/imi-rhonda-cta.jpg") !important ;
-    opacity: 1;
+  #imgDiv-jobs-list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* background: url("../img-big/imi-rhonda-cta.jpg") !important; */
+    background-image: url("../img/rhonda-find-job2.jpg") !important ;
+    background-repeat: no-repeat;
+    background-size: contain;
   }
-  #imgDiv-rhonda{
+  #imgDiv-rhonda {
     /* change to bigger background img */
-    background: url("../img-big/imi-Artificial-Intelligence-rhonda.jpg") !important ;
-    opacity: 1;
+    /* background: url("../img-big/imi-Artificial-Intelligence-rhonda.jpg") !important; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* background-image:url("../img-big/imi-Artificial-Intelligence-rhonda.jpg") !important; */
+    background-image:url("../img/imi-Artificial Intelligence-rhonda.jpg") !important;
+    background-repeat: no-repeat;
+    background-size: contain;
   }
 }
-
 
 /* css for rhondaPage  */
 
@@ -90,44 +117,41 @@ body .rhondaPage .hs-button.primary, body input[type="submit"], body input[type=
   /* background: #c6c6c6; */
 }
 
-
-
 /* css for contact.html */
+
 .contactPage .hs-form label {
   visibility: visible;
   font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
   font-size: 1em;
 }
 
-.contactPage div.input{
-  margin-right:0;
+.contactPage div.input {
+  margin-right: 0;
 }
 
-.contactPage input.hs-button.primary.large{
+.contactPage input.hs-button.primary.large {
   width: 92.3%;
 }
 
-textarea#message-8c975b73-ecda-4075-bcee-c81ad08d7b74.hs-input{
+textarea#message-8c975b73-ecda-4075-bcee-c81ad08d7b74.hs-input {
   width: 95%;
 }
+
 @media (min-width: 400px) {
-  textarea#message-8c975b73-ecda-4075-bcee-c81ad08d7b74.hs-input{
+  textarea#message-8c975b73-ecda-4075-bcee-c81ad08d7b74.hs-input {
     width: 100%;
   }
-
-  .contactPage input.hs-button.primary.large{
+  .contactPage input.hs-button.primary.large {
     width: 98%;
   }
-
 }
-@media (min-width: 500px){
-  .contactPage input.hs-button.primary.large{
+
+@media (min-width: 500px) {
+  .contactPage input.hs-button.primary.large {
     width: 30%;
     /* float: right; */
-
   }
 }
-
 
 /* .contactPage .hs-form-8c975b73-ecda-4075-bcee-c81ad08d7b74_ae151122-e2e4-465e-858f-ecf7f7b9e23c fieldset.form-columns-1 .hs-input {
     width: 100%;
@@ -144,28 +168,26 @@ body .contactPage .hs-button.primary, body input[type="submit"], body input[type
   /* background: #c6c6c6; */
 }
 
-
 /* css for rhonda.html page  */
 
 /* show text */
-.rhondaPage.hover-element__reveal{
+
+.rhondaPage.hover-element__reveal {
   opacity: 1;
   /* background-color: #8888886 */
   /* background-color: #929292 */
-
 }
 
 /* change themes.css */
-.rhondaPage[data-overlay]:before {
-    background: #929292;
 
+.rhondaPage[data-overlay]:before {
+  background: #929292;
 }
 
-.rhondaPage.hover-element__reveal.myhover:hover{
+.rhondaPage.hover-element__reveal.myhover:hover {
   /* opacity: 0.6 */
   background-color: rgba(0, 0, 0, 0.28);
   /* background: #888888; */
-
 }
 
 /* .rhondaPage.hover-element__reveal.myhover:hover .project-thumb__title{
@@ -175,7 +197,6 @@ body .contactPage .hs-button.primary, body input[type="submit"], body input[type
   background: #888888;
 
 } */
-
 
 /* .rhondaPage.hover-element__reveal.myhover:hover #myText{
   font-size: 40px;
